fix chrome bug - https://stackoverflow.com/questions/63856278/unwanted-1px-padding-if-div-has-a-border-only-in-chrome

--- a/app/assets/less.less
+++ b/app/assets/less.less
@@ -208,6 +208,7 @@ html, body {
 			overflow: hidden;
 			.borderAndBeforeBackground(@color) {
 				border: 2px solid @color;
+				background-color: @color;
 				&:before {
 					background: @color;
 				}
